# gradeloop-core-v2

./: .env.example  .gitattributes  .gitignore  API_DOCUMENTATION.md  CONTRIBUTING.md  LLMs.txt  Makefile  PR_MESSAGE.md  SKILL_Frontend.md  USER_MANAGEMENT_SETUP.md  clone_detection_summary.md  docker-compose.prod.yaml  docker-compose.yaml  package.json  pnpm-lock.yaml  roles-permissions.html
apps/services/acafs-service/: .gitignore  Dockerfile  README.md  pyproject.toml
apps/services/acafs-service/app/: __init__.py  config.py  logging_config.py  main.py
apps/services/acafs-service/app/schemas/: __init__.py  chat.py  grade.py  submission_event.py
apps/services/acafs-service/app/services/evaluation/: __init__.py  ast_parser.py  judge0_client.py  language_router.py
apps/services/acafs-service/app/services/feedback/: llm_grader.py  socratic_chat.py
apps/services/acafs-service/app/services/messaging/: __init__.py  rabbitmq_consumer.py
apps/services/acafs-service/app/services/storage/: __init__.py  minio_client.py  postgres_client.py
apps/services/acafs-service/app/workers/: __init__.py  eval_worker.py
apps/services/acafs-service/docs/: ast-extraction-guide.md  grading-pipeline.md
apps/services/cipas-service/: .dockerignore  API_DOCUMENTATION.md  DEPLOYMENT.md  DOCKER_TRAEFIK_SUMMARY.md  Dockerfile  INTEGRATION_GUIDE.md  QUICKSTART.md  main.py  pyproject.toml  routes.py  schemas.py  test_tiered_pipeline.py  test_type4_semantic.py
apps/services/cipas-service/clone_detection/: TOMA_DATASET.md  __init__.py
apps/services/cipas-service/clone_detection/evaluators/: __init__.py
apps/services/cipas-service/clone_detection/features/: __init__.py  semantic_features.py  syntactic_features.py
apps/services/cipas-service/clone_detection/models/: __init__.py  classifiers.py
apps/services/cipas-service/clone_detection/models/saved/: type3_rf.pkl  type4_xgb.pkl
apps/services/cipas-service/clone_detection/normalizers/: __init__.py
apps/services/cipas-service/clone_detection/pipelines/: __init__.py  tiered_pipeline.py
apps/services/cipas-service/clone_detection/tokenizers/: __init__.py
apps/services/cipas-service/clone_detection/utils/: __init__.py  common_setup.py
apps/services/cipas-service/scripts/: build_parsers.py  calibrate_thresholds.py  evaluate_bcb.py  run_pipeline.py  setup_env.sh  thresholds.json  train_type3.py  train_type4.py  train_type4_semantic.py
apps/services/cipas-service/src/cipas/: main.py
apps/services/cipas-service/src/cipas/core/: config.py  exceptions.py
apps/services/cipas-service/src/cipas/domain/: __init__.py  models.py
apps/services/cipas-service/src/cipas/extraction/: __init__.py  granule_extractor.py  normalizer.py
apps/services/cipas-service/src/cipas/ingestion/: __init__.py  pipeline.py  worker.py
apps/services/cipas-service/src/cipas/parsing/: __init__.py  base.py  c_parser.py  java_parser.py  python_parser.py  registry.py
apps/services/cipas-service/src/cipas/similarity/: __init__.py  clustering.py  evidence_models.py  evidence_service.py  lcs_engine.py  models.py  pre_filter.py  scorer.py
apps/services/cipas-service/src/cipas/storage/: __init__.py  db.py  repository.py  similarity_repository.py
apps/services/cipas-service/tests/similarity/: test_clustering.py  test_lcs_engine.py  test_pre_filter.py  test_scorer.py
apps/services/cipas-services/cipas-semantics-old/: Dockerfile  README.md  config.yaml  evaluate.py  evaluate_core.py  main.py  pyproject.toml  semantics-summary.md  train.py  train_codenet_core.py
apps/services/cipas-services/cipas-semantics-old/clone_detection/: __init__.py
apps/services/cipas-services/cipas-semantics-old/clone_detection/features/: __init__.py  hard_negative_mining.py  semantic_features.py  sheneamer_features.py
apps/services/cipas-services/cipas-semantics-old/clone_detection/models/: __init__.py  classifiers.py
apps/services/cipas-services/cipas-semantics-old/clone_detection/tokenizers/: __init__.py  tree_sitter_tokenizer.py
apps/services/cipas-services/cipas-semantics-old/clone_detection/utils/: common_setup.py  metrics_visualization.py
apps/services/cipas-services/cipas-semantics-old/evaluation_output/: metrics_20260301_071216.json  metrics_20260301_071225.json  metrics_20260301_071234.json  metrics_20260301_071708.json  metrics_20260301_072202.json  metrics_20260301_081258.json  metrics_java.json  metrics_python.json
apps/services/cipas-services/cipas-semantics-old/evaluation_output/reports/: evaluation_report_c.html  evaluation_report_python.html
apps/services/cipas-services/cipas-semantics-old/metrics_output/reports/: training_report_type4_xgb_universal.html
apps/services/cipas-services/cipas-semantics-old/models/: type4_xgb_universal.pkl.features.json  type4_xgb_universal.pkl.metrics.json
apps/services/cipas-services/cipas-semantics-old/tests/: test_sheneamer_detector.py
apps/services/cipas-services/cipas-syntactics/: Dockerfile  PIPELINE.md  README.md  VISUALIZATION_TEST_RESULTS.md  cipas-syntactics.md  config.yaml  database.py  evaluate.py  evaluate_clustering.py  evaluate_core.py  evaluate_model.py  evaluate_parallel.py  main.py  pyproject.toml  routes.py  run_pipeline.py  run_train_evaluate.sh  schemas.py  train.py  train_core.py  train_model.py  tui.py
apps/services/cipas-services/cipas-syntactics/clone_detection/: __init__.py  cascade_worker.py  collusion_graph.py  lsh_index.py  preprocessor.py  type3_filter.py
apps/services/cipas-services/cipas-syntactics/clone_detection/features/: __init__.py  syntactic_features.py
apps/services/cipas-services/cipas-syntactics/clone_detection/models/: __init__.py  scaler.pkl  (+7 more)
apps/services/cipas-services/cipas-syntactics/db_migrations/: V001__add_fragments_and_matches.sql  V002__add_similarity_reports_and_annotations.sql
apps/services/cipas-services/cipas-syntactics/repositories/: __init__.py  annotations.py  similarity_reports.py
apps/services/cipas-services/cipas-syntactics/scripts/: run_pipeline.sh  train_evaluate_pipeline.sh
apps/services/cipas-services/cipas-syntactics/tests/: test_pipeline_phases.py
(+913 files in other folders)
