[tool.poetry]
name = "acafs-service"
version = "0.1.0"
description = "Automated Code Analysis & Feedback System Engine for Gradeloop"
authors = ["GradeLoop Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pika = "^1.3.2"
minio = "^7.2.0"
asyncpg = "^0.30.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
structlog = "^24.4.0"
tree-sitter = "~0.22.0"
tree-sitter-c = "~0.21.0"
tree-sitter-cpp = "~0.22.0"
tree-sitter-java = "~0.21.0"
tree-sitter-python = "~0.21.0"
tree-sitter-javascript = "~0.21.0"
tree-sitter-c-sharp = "~0.21.0"
python-json-logger = "^2.0.7"
httpx = "^0.28.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.0"
mypy = "^1.13.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
# Lint configuration: moved to the `lint` subsection (newer ruff versions).
[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
