[project]
name = "cipas-semantics"
version = "0.1.0"
description = "Semantic Code Clone Detection Service (Type-4) with Tree-sitter and XGBoost"
authors = [
    {name = "Dasun Wickramasooriya",email = "dasun.wickramasooriya@gmail.com"}
]
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "fastapi (>=0.133.0,<0.134.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "pydantic (>=2.0.0,<3.0.0)",
    # Tree-sitter for CST parsing (compatible versions)
    "tree-sitter (>=0.24.0,<0.26.0)",
    "tree-sitter-java (>=0.23.5,<0.24.0)",
    "tree-sitter-c (>=0.24.0,<0.25.0)",
    "tree-sitter-c-sharp (>=0.23.0,<0.24.0)",
    "tree-sitter-python (>=0.23.0,<0.24.0)",
    # ML libraries for semantic analysis
    "scikit-learn (>=1.6.0,<2.0.0)",
    "xgboost (>=2.1.0,<3.0.0)",
    # Data processing
    "pandas (>=2.2.0,<3.0.0)",
    "numpy (>=2.2.0,<3.0.0)",
    # String similarity metrics
    "rapidfuzz (>=3.14.0,<4.0.0)",
    # Progress bars
    "tqdm (>=4.67.0,<5.0.0)",
    # Visualization
    "matplotlib (>=3.9.0,<4.0.0)",
    "seaborn (>=0.13.0,<0.14.0)",
    "plotly (>=5.24.0,<6.0.0)",
    # Configuration
    "pyyaml (>=6.0.0,<7.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
