[project]
name = "cipas-syntactics"
version = "0.1.0"
description = "Syntactic Code Clone Detection Service (Type-1/2/3) with Tree-sitter and Random Forest"
authors = [
    {name = "Dasun Wickramasooriya",email = "dasun.wickramasooriya@gmail.com"}
]
requires-python = "^3.14"
dependencies = [
    "fastapi (>=0.133.0,<0.134.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "pydantic (>=2.0.0,<3.0.0)",
    # Tree-sitter for CST parsing (compatible versions)
    "tree-sitter (>=0.24.0,<0.26.0)",
    "tree-sitter-java (>=0.23.5,<0.24.0)",
    "tree-sitter-c (>=0.24.0,<0.25.0)",
    "tree-sitter-python (>=0.23.0,<0.24.0)",
    # ML libraries for syntactic analysis
    "scikit-learn (>=1.6.0,<2.0.0)",
    # Data processing
    "pandas (>=2.2.0,<3.0.0)",
    "numpy (>=2.2.0,<3.0.0)",
    # String similarity metrics (rapidfuzz is faster and maintained)
    "rapidfuzz (>=3.14.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
